--- a/megaproject/package.json
+++ b/megaproject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contextapi",
+  "name": "megaproject",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.10",
+    "@tinymce/tinymce-react": "^6.2.1",
+    "appwrite": "^18.1.1",
+    "html-react-parser": "^5.2.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.58.0",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.6.2",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
